--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Source+Sans+Pro:ital,wght@1,200&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Lobster&family=Pacifico&family=Train+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Source+Sans+Pro:ital,wght@1,300&display=swap');
+
 body{
 	display:flex;
 	margin: 0px 0px 0px 0px;
@@ -53,6 +56,7 @@ body{
   left: 12%;
   color: white;
   font-size:22px;
+  font-family: Quicksand;
 }
 .center-left{
   position: absolute;
